--- a/_posts/2017-12-12-blog-post-1.md
+++ b/_posts/2017-12-12-blog-post-1.md
@@ -14,7 +14,7 @@ I went to Iceland with some Dartmouth friends from December 1 - December 9, 2017
 On Photography
 ------
 <img src='/images/iceland_3.jpg' width="29.5%">
-<img src='/images/iceland_1.png' width="33%">
+<img src='/images/iceland_1.jpeg' width="33%">
 <img src='/images/iceland_2.jpg' width="29.5%">
 
 I got to try my hand at photography for the first time in one of the most photogenic countries in the world. At Iceland, every daylight hour was golden hour. Although I didn't have any prior experience, Kevin and Michael, two experienced photographers, gave me advice, taught me how to use my camera, and answered my silly questions. Hopefully I came out with some decent pictures. (See the link above. Can you guess which ones are taken with my iPhone?)
