--- a/_posts/2018-03-15-blog-post-3.md
+++ b/_posts/2018-03-15-blog-post-3.md
@@ -36,6 +36,10 @@ Girl with the Dragon Tattoo
 
 Dog Sledding
 
+In early February, I went on a dog sledding trip with Dartmouth's South House! Dartmouth's new housing system (which is intended to asf the long-standing fraternity system) receives too much funding for community bonding events, so I and twelve other students selected by lottery were able to go dog sledding for the weekend with the Mahoosuc Guide Service on Lake Umbagog, Maine. We departed from Dartmouth on a Friday night to the Mahoosuc lodge, played cards in the evening, and slept in the heated lodge that night. The next morning, we got dressed, met the dogs, and drove to Lake Umbagog where we split up, with half of us skiing to a campsite on the lake and the other half dog sledding.
+
+Dog sledding was a lot of fun. The weather was great (only around -5 Celcius), the skies were clear, and dogs had so much energy. Each sled had six or seven dogs, and the dogs were very well-trained, following the lead sled and knowing when to stop. In total, we mushed (dog sledded) for about six miles into camp, which took about an hour, as the dogs pulled the sleds at around the same pace as a human running. Once we got to camp, we set up camp, built a campfire on the frozen lake, and broke a hole through the ice to fetch water. At night, we slept in tents (with double sleeping bags), with some students choosing to sleeping outside in the dogsleds.
+
 
 
 Closing
