--- a/_posts/2018-03-15-blog-post-3.md
+++ b/_posts/2018-03-15-blog-post-3.md
@@ -6,6 +6,8 @@ tags:
   - dartmouth
 ---
 
+This is currently a work in progress.
+
 Intro about this term
 
 Classes
@@ -14,6 +16,7 @@ This term, I took Cognitive Computing with Watson (COSC 89), Systems (ENGS 22), 
 
 **Cognitive Computing with Watson**: This class 
 
+**The Making of the Modern Middle East**: One of the really cool things about the Middle Eastern department at Dartmouth is that we were able to meet many historical actors on a personal level. Bassem Youssef, an Egyptian comedian, came to my class, and after I asked him a quesiton about the state of Egypt, he saw the notebook I was writing in and commented, "Wow is that your handwriting? Can I see that?" and processed to examine my notebook. For the rest of the time, he made no less than three good humoured jokes about it including "I mean if I were a girl, I would be like wow thats so sexy."
 
 
 Activities
@@ -22,11 +25,11 @@ Research with Professor Hassanpour
 
 I continued working part-time for [Protago Labs](http://protagolab.com/), a small artificial intelligence company I also worked for over the summer and into the fall. This term, I gained some exposure to natural language processing through helping out with our generative chatbot. 
 
-I was relatively involved in the Fencing team this term, going to 2-3 practices a week and competing in a tournament as the alternate. This year we got two ridiculously good men's epeeists, so chances I'll get to start in any competitions are slim.
+I was relatively involved in the Fencing team this term, going to 2-3 practices a week and competing in a tournament as the alternate. This year we got two ridiculously good men's epeeists Frank and Christian, so chances I'll get to start in any competitions are slim.
 
 I was not active with the formula racing team this winter, though my friend June Kim is working on self-driving car software which I have occassionally helped out on. 
 
-In finance society, I served as the vice-president of foreign exchange. I chose not to attend many of the recruiting sessions because I was busy, so my involvement was solely leading weekly presentations and market updates for the group. 
+In the Dartmouth Finance Society, I served as the vice-president of foreign exchange. I chose not to attend many of the recruiting sessions because I was busy, so my involvement was solely leading weekly presentations and market updates for the currencies group. 
 
 Personal
 ------
@@ -44,7 +47,7 @@ Dog sledding was a lot of fun. The weather was great (only around -5 Celcius), t
 
 Closing
 ------
-Overall, xyz. In the spring, I will be working with Dr. Alin Popescu at Oracle's internet intelligence office in Hanover, comuting from White River Junction. Looking forward, I will be studying at the Technical University of Denmark (DTU) in Copanhagen for my junior fall, and interning with the American University of Kuwait in Kuwait City for my junior spring in 2019. 
+Overall, xyz. In the spring, I will be working with Dr. Alin Popescu at Oracle's internet intelligence office in Hanover. Looking forward, I will be studying at the Technical University of Denmark (DTU) in Copanhagen for my junior fall, and interning with the American University of Kuwait in Kuwait City for my junior spring in 2019. 
 
 
 
