--- a/_posts/2018-03-15-blog-post-3.md
+++ b/_posts/2018-03-15-blog-post-3.md
@@ -6,48 +6,71 @@ tags:
   - dartmouth
 ---
 
-This is currently a work in progress.
+A lot of students find winter term challenging because to the cold weather. At times, I definitely felt like ignoring all my work and just watching youtube videos in bed. But overall, it was a good term filled with personal and intellectual growth. 
 
-Intro about this term
+I'm struggling to decide whether these blogs are for me or for other people. I've sent them to family and close friends, but I don't really write them with the purpose of being especially eventful or engaging. I think they're more like a record of my time in college that people who know me well would find interesting if they were already I thought I were an interesting person, or if they're curious what my life is like. I've thought about skipping my coursework entirely because it can be dull, but I'd like to think that classes are an important part of being a college student, and I want to remember the things I learned here at Dartmouth. So I'll keep these blogs as is for now.
 
 Classes
 ------
 This term, I took Cognitive Computing with Watson (COSC 89), Systems (ENGS 22), The Making of the Modern Middle East (HIST 90), and a Reading Course in Computer Science (COSC 94). 
 
-**Cognitive Computing with Watson**: This class 
+**Cognitive Computing with Watson**: This class was a specialized introduction to using IBM's Watson API for creating AI applications. For my [final project](https://github.com/jasonwei20/Song-RNN), my friends June, Tong, and I programmed an AI that writes original song lyrics. 
 
-**The Making of the Modern Middle East**: One of the really cool things about the Middle Eastern department at Dartmouth is that we were able to meet many historical actors on a personal level. Bassem Youssef, an Egyptian comedian, came to my class, and after I asked him a quesiton about the state of Egypt, he saw the notebook I was writing in and commented, "Wow is that your handwriting? Can I see that?" and processed to examine my notebook. For the rest of the time, he made no less than three good humoured jokes about it including "I mean if I were a girl, I would be like wow thats so sexy."
+**The Making of the Modern Middle East**: One of the cool things about the Middle East Studies department at Dartmouth is that we were able to meet many historical actors on a personal level. [Bassem Youssef](https://en.wikipedia.org/wiki/Bassem_Youssef), an Egyptian comedian who ran a satirical show criticizing the government during the revolution, came to my class. After I asked him a question about the state of Egypt, he saw the notebook I was writing in and commented, "Wow. Is that your handwriting? Can I see that??" and proceeded to examine it. For the rest of the time, he made no less than three good humoured jokes about it including "if I were a girl, I would be like 'wow, thats so sexy.'" For my final paper, I wrote about the evolving legacy of Muhammad Ali, governor of Egypt from 1805-1841. Basically, historians in the early 1900s saw him as a beloved founder of modern Egypt, but recent scholars focus on his oppression and harsh treatment of the people. I argue that the evolution of his legacy is representative of a shift in which recent historians choose to study the everyday man instead of leaders and their imperial conquests.
+
+**Systems**: Pretty standard core engineering class. The punchline was that you can model mechanical, electrical, thermal, fluid, and rotational systems with the same set of state-variable equations. 
+
+**Reading Course in Deep Learning for Medical Image Analysis**: I worked with [Professor Saeed Hassanpour](https://www.hassanpourlab.com/) at the hospital on a project using deep learning to predict lung cancer patterns from their slide images. This term was mostly data cleaning, but there will be more to come.
+
+<img src='/images/IMG_6297.JPG' width="99%">
+Left, my friend Oliver; middle, Bassem Youssef; right, me.
 
 
 Activities
 ------
-Research with Professor Hassanpour
 
-I continued working part-time for [Protago Labs](http://protagolab.com/), a small artificial intelligence company I also worked for over the summer and into the fall. This term, I gained some exposure to natural language processing through helping out with our generative chatbot. 
+I continued working part-time for [Protago Labs](http://protagolab.com/), an AI company I also worked for over the summer and into the fall. This term, I gained exposure to natural language processing by helping out with our generative chatbot. This project really stressed the importance of good data. We had spent a significant amount of time working on improving the architecture of our model, but it turns out the greatest payoff was from spending a solid day cleaning and confirming the quality of our training data.
 
-I was relatively involved in the Fencing team this term, going to 2-3 practices a week and competing in a tournament as the alternate. This year we got two ridiculously good men's epeeists Frank and Christian, so chances I'll get to start in any competitions are slim.
+I was relatively involved in the Fencing team this term, going to 2-3 practices a week and competing in a tournament as the alternate. This year we got two ridiculously good men's epeeists, Frank and Christian, so chances I'll get to start in any competitions are slim, but I'm planning on going to nationals in April to support the team as the alternate.
 
-I was not active with the formula racing team this winter, though my friend June Kim is working on self-driving car software which I have occassionally helped out on. 
+I was not active with the formula racing team this winter, though my friend June is working on self-driving car software for our electric car Paula, which I have occassionally helped out on. June is one of my best friends and we've spent countless hours this term talking about silly machine learning ideas and our dreams of becoming deep learning researchers.
 
-In the Dartmouth Finance Society, I served as the vice-president of foreign exchange. I chose not to attend many of the recruiting sessions because I was busy, so my involvement was solely leading weekly presentations and market updates for the currencies group. 
+In the Dartmouth Finance Society, I served as the vice-president of foreign exchange. I did attend many of the recruiting sessions because I was busy, so my involvement was mostly leading weekly presentations and market updates for the currencies group. 
 
 Personal
 ------
-Chinese Language House
 
-Girl with the Dragon Tattoo
+**Chinese Language House: Matt and Holly**
 
-Dog Sledding
+Living in the Chinese Language House was again a pleasure. I would totally do it for the rest of my time here at Dartmouth. This term, I had a single, and I enjoyed having my own space. Two of my friends, Matt and Holly, are juniors and will be off in the spring, and since I'm planning on being abroad for my junior year (their senior year), its possible that I won't ever see them again. Matt and I played ping pong every week in the basement during our study breaks, and he's a relaxed, down-to-earth guy whom I could always be myself with. Our ping pong matches were always filled with obnoxious tennis grunts, "what the", and "Hello!" I'll miss the fun times we had together.
 
-In early February, I went on a dog sledding trip with Dartmouth's South House! Dartmouth's new housing system (which is intended to asf the long-standing fraternity system) receives too much funding for community bonding events, so I and twelve other students selected by lottery were able to go dog sledding for the weekend with the Mahoosuc Guide Service on Lake Umbagog, Maine. We departed from Dartmouth on a Friday night to the Mahoosuc lodge, played cards in the evening, and slept in the heated lodge that night. The next morning, we got dressed, met the dogs, and drove to Lake Umbagog where we split up, with half of us skiing to a campsite on the lake and the other half dog sledding.
+Holly, my residential advisor, was both the life and savior of our house. She is absolutely the sweetest, cleaning up after everyone and always bringing food for the house. We got closer this term since I spent more time studying in the house (Hanover winter is cold so I did not want to walk to the library), and she thinks I'm secretly a spy. We watched the new episodes of Casualty together, even though Grey's Anatomy is obviously the superior medical drama series. We also had a lot of fun playing poker and "Cluedo" with the rest of the house. Holly, I'll miss you.
 
-Dog sledding was a lot of fun. The weather was great (only around -5 Celcius), the skies were clear, and dogs had so much energy. Each sled had six or seven dogs, and the dogs were very well-trained, following the lead sled and knowing when to stop. In total, we mushed (dog sledded) for about six miles into camp, which took about an hour, as the dogs pulled the sleds at around the same pace as a human running. Once we got to camp, we set up camp, built a campfire on the frozen lake, and broke a hole through the ice to fetch water. At night, we slept in tents (with double sleeping bags), with some students choosing to sleeping outside in the dogsleds.
+Matt and Holly are people I look up to and inspire me to be better. It's sad that we can't always be with our friends. 
 
+<img src='/images/IMG_9055.JPG' width="99%">
+
+Left, Matt; middle, me; right, Holly. 
+
+
+**The Girl with the Dragon Tattoo**
+
+One of my new years resolutions was to read more books, and I decided to start with Stieg Larsson's the Girl with the Dragon Tattoo. The book is about Lisbeth Salander, a female computer hacker with a photographic memory who is deemed mentally incompetent due to her social inaptitude and aversion of people. She uses her skills to investigate cases for a security company, and the story is about her unraveling the secret of one of the largest business magnates in Sweden. My reading of the book was that it felt similar to The Catcher in the Rye, in which the main character feels isolated from society but his thoughts are very relatable. This book is probably the least academic of the books on my reading list, but I loved it and would definitely recommend it as a fun read. I also read the sequel, The Girl Who Played with Fire, in a single day while traveling to visit my dad.
+
+
+**Dog Sledding**
+
+In early February, I went on a dog sledding trip with South House! Dartmouth's new housing system (which is intended to provide an alternative to the long-standing fraternity system), receives too much funding for community bonding events, so I and twelve other students selected by lottery were able to go dog sledding for the weekend with the Mahoosuc Guide Service on Lake Umbagog, Maine. We departed from Dartmouth on a Friday night to the Mahoosuc lodge, played cards until bedtime, and slept in the lodge that night. The next morning we met the dogs and drove to Lake Umbagog where we split up, with half of us skiing to a campsite on the lake and the other half dog sledding.
+
+Dog sledding was a lot of fun. The weather was great (only around -5 Celcius), the skies were clear, and dogs had so much energy. Each sled had six or seven dogs, and the dogs were very well-trained, following the alpha dog and knowing when to stop. In total, we mushed (dogsledded) for about six miles into camp, which took about an hour, as the dogs pulled the sleds at around the same pace as a human running. Once we got to camp, we built a campfire on the frozen lake, and broke a hole through the ice to fetch water. At night, we slept in tents (with double sleeping bags), and some students choose to sleep outside in the dogsleds. The next day, we cross-country skiied back to the lodge. 
+
+<img src='/images/IMG_8085.JPG' width="49%">
+<img src='/images/IMG_8111.JPG' width="49%">
 
 
 Closing
 ------
-Overall, xyz. In the spring, I will be working with Dr. Alin Popescu at Oracle's internet intelligence office in Hanover. Looking forward, I will be studying at the Technical University of Denmark (DTU) in Copanhagen for my junior fall, and interning with the American University of Kuwait in Kuwait City for my junior spring in 2019. 
+Overall, winter term had a lot of high points and was not at all as rough as I had expected it to be. In the spring, I will be working with Dr. Alin Popescu at Oracle's internet intelligence office in Hanover. Looking forward, I will be studying at the Technical University of Denmark (DTU) in Copanhagen for my junior fall, and interning with the American University of Kuwait (AUK) in Kuwait City for my junior spring in 2019. 
 
 
 
