try to center image

--- a/_posts/2018-03-15-blog-post-3.md
+++ b/_posts/2018-03-15-blog-post-3.md
@@ -66,6 +66,7 @@ Dog sledding was a lot of fun. The weather was great (only around -5 Celcius), t
 
 <img src='/images/IMG_8085.JPG' width="49%">
 <img src='/images/IMG_8111.JPG' width="49%">
+Left, me with a cute doggie; right, me using a spear to break into the ice on a lake to get drinking water.
 
 
 Closing
