--- a/_posts/2018-03-15-blog-post-3.md
+++ b/_posts/2018-03-15-blog-post-3.md
@@ -4,6 +4,10 @@ date: 2018-03-15
 permalink: /posts/2018/2/blog-post-3/
 tags:
   - dartmouth
+  - bassem youssef
+  - watson
+  - dog sledding
+  - deep learning
 ---
 
 A lot of students find winter term challenging because to the cold weather. At times, I definitely felt like ignoring all my work and just watching youtube videos in bed. But overall, it was a good term filled with personal and intellectual growth. 
@@ -46,7 +50,7 @@ Living in the Chinese Language House was again a pleasure. I would totally do it
 
 Holly, my residential advisor, was both the life and savior of our house. She is absolutely the sweetest, cleaning up after everyone and always bringing food for the house. We got closer this term since I spent more time studying in the house (Hanover winter is cold so I did not want to walk to the library), and she thinks I'm secretly a spy. We watched the new episodes of Casualty together, even though Grey's Anatomy is obviously the superior medical drama series. We also had a lot of fun playing poker and "Cluedo" with the rest of the house. Holly, I'll miss you.
 
-Matt and Holly are people I look up to and inspire me to be better. It's sad that we can't always be with our friends. 
+Matt and Holly are people who I look up to and inspire me to be better. It's sad that we can't always be with our friends. 
 
 <img src='/images/IMG_9055.JPG' width="99%">
 
