--- a/_posts/2018-03-15-blog-post-3.md
+++ b/_posts/2018-03-15-blog-post-3.md
@@ -10,7 +10,7 @@ tags:
   - deep learning
 ---
 
-A lot of students find winter term challenging because to the cold weather. At times, I definitely felt like ignoring all my work and just watching youtube videos in bed. But overall, it was a good term filled with personal and intellectual growth. 
+A lot of students find winter term challenging because of the cold weather. At times, I definitely felt like ignoring all my work and just watching youtube videos in bed. But overall, it was a good term filled with personal and intellectual growth. 
 
 I'm struggling to decide whether these blogs are for me or for other people. I've sent them to family and close friends, but I don't really write them with the purpose of being especially eventful or engaging. I think they're more like a record of my time in college that people who know me well would find interesting if they were already I thought I were an interesting person, or if they're curious what my life is like. I've thought about skipping my coursework entirely because it can be dull, but I'd like to think that classes are an important part of being a college student, and I want to remember the things I learned here at Dartmouth. So I'll keep these blogs as is for now.
 
