--- a/_posts/2018-03-15-blog-post-3.md
+++ b/_posts/2018-03-15-blog-post-3.md
@@ -39,7 +39,7 @@ I was relatively involved in the Fencing team this term, going to 2-3 practices 
 
 I was not active with the formula racing team this winter, though my friend June is working on self-driving car software for our electric car Paula, which I have occassionally helped out on. June is one of my best friends and we've spent countless hours this term talking about silly machine learning ideas and our dreams of becoming deep learning researchers.
 
-In the Dartmouth Finance Society, I served as the vice-president of foreign exchange. I did attend many of the recruiting sessions because I was busy, so my involvement was mostly leading weekly presentations and market updates for the currencies group. 
+In the Dartmouth Finance Society, I served as the vice-president of foreign exchange. I did not attend many of the recruiting sessions because I was busy, so my involvement was mostly leading weekly presentations and market updates for the currencies group. 
 
 Personal
 ------
