--- a/_posts/2018-03-15-blog-post-3.md
+++ b/_posts/2018-03-15-blog-post-3.md
@@ -12,7 +12,7 @@ tags:
 
 A lot of students find winter term challenging because of the cold weather. At times, I definitely felt like ignoring all my work and just watching youtube videos in bed. But overall, it was a good term filled with personal and intellectual growth. 
 
-I'm struggling to decide whether these blogs are for me or for other people. I've sent them to family and close friends, but I don't really write them with the purpose of being especially eventful or engaging. I think they're more like a record of my time in college that people who know me well would find interesting if they were already I thought I were an interesting person, or if they're curious what my life is like. I've thought about skipping my coursework entirely because it can be dull, but I'd like to think that classes are an important part of being a college student, and I want to remember the things I learned here at Dartmouth. So I'll keep these blogs as is for now.
+I'm struggling to decide whether these blogs are for me or for other people. I've sent them to family and close friends, but I don't really write them with the purpose of being especially eventful or engaging. I think they're more like a record of my time in college that people who know me well would find interesting if they were already I thought I were an interesting person, or if they're curious what my life is like. I've thought about not writing about my coursework entirely because it can be dull, but I'd like to think that classes are an important part of being a college student, and I want to remember the things I learned here at Dartmouth. So I'll keep these blogs as is for now.
 
 Classes
 ------
@@ -46,7 +46,7 @@ Personal
 
 **Chinese Language House: Matt and Holly**
 
-Living in the Chinese Language House was again a pleasure. I would totally do it for the rest of my time here at Dartmouth. This term, I had a single, and I enjoyed having my own space. Two of my friends, Matt and Holly, are juniors and will be off in the spring, and since I'm planning on being abroad for my junior year (their senior year), its possible that I won't ever see them again. Matt and I played ping pong every week in the basement during our study breaks, and he's a relaxed, down-to-earth guy whom I could always be myself with. Our ping pong matches were always filled with obnoxious tennis grunts, "what the", and "Hello!" I'll miss the fun times we had together.
+Living in the Chinese Language House was again a pleasure. I would totally do it for the rest of my time here at Dartmouth. This term, I had a single, and I enjoyed having my own space. Two of my friends, Matt and Holly, are juniors and will be off in the spring, and since I'm planning on being abroad for my junior year (their senior year), its possible that I won't ever see them again. Matt and I played ping pong every week in the basement during our study breaks, and he's a relaxed, down-to-earth guy whom I could always be myself with. Our ping pong matches were always filled with obnoxious tennis grunts, "what the", and "[Hello!](https://www.youtube.com/watch?v=vSrFpH9uSvw&t=60s)" I'll miss the fun times we had together.
 
 Holly, my residential advisor, was both the life and savior of our house. She is absolutely the sweetest, cleaning up after everyone and always bringing food for the house. We got closer this term since I spent more time studying in the house (Hanover winter is cold so I did not want to walk to the library), and she thinks I'm secretly a spy. We watched the new episodes of Casualty together, even though Grey's Anatomy is obviously the superior medical drama series. We also had a lot of fun playing poker and "Cluedo" with the rest of the house. Holly, I'll miss you.
 
