--- a/_posts/2018-03-15-blog-post-3.md
+++ b/_posts/2018-03-15-blog-post-3.md
@@ -59,7 +59,7 @@ Left, Matt; middle, me; right, Holly.
 
 **The Girl with the Dragon Tattoo**
 
-One of my new years resolutions was to read more books, and I decided to start with Stieg Larsson's the Girl with the Dragon Tattoo. The book is about Lisbeth Salander, a female computer hacker with a photographic memory who is deemed mentally incompetent due to her social inaptitude and aversion of people. She uses her skills to investigate cases for a security company, and the story is about her unraveling the secret of one of the largest business magnates in Sweden. My reading of the book was that it felt similar to The Catcher in the Rye, in which the main character feels isolated from society but his thoughts are very relatable. This book is probably the least academic of the books on my reading list, but I loved it and would definitely recommend it as a fun read. I also read the sequel, The Girl Who Played with Fire, in a single day while traveling to visit my dad.
+One of my new years resolutions was to read more books, and I decided to start with Stieg Larsson's _The Girl with the Dragon Tattoo_. The book is about Lisbeth Salander, a female computer hacker with a photographic memory who is deemed mentally incompetent due to her social inaptitude and aversion of people. She uses her skills to investigate cases for a security company, and the story is about her unraveling the secret of one of the largest business magnates in Sweden. My reading of the book was that it felt similar to _The Catcher in the Rye_, in which the main character feels isolated from society but his thoughts are very relatable. This book is probably the least academic of the books on my reading list, but I loved it and would definitely recommend it as a fun read. I also read the sequel, _The Girl Who Played with Fire_, in a single day while traveling to visit my dad.
 
 
 **Dog Sledding**
@@ -74,7 +74,7 @@ Left, me with a cute doggie; right, me using a spear to break into the ice on a 
 
 Closing
 ------
-Overall, winter term had a lot of high points and was not at all as rough as I had expected it to be. In the spring, I will be working with Dr. Alin Popescu at Oracle's internet intelligence office in Hanover. Looking forward, I will be studying at the Technical University of Denmark (DTU) in Copanhagen for my junior fall, and interning with the American University of Kuwait (AUK) in Kuwait City for my junior spring in 2019. 
+Overall, winter term had a lot of high points and was not at all as rough as I had expected it to be. In the spring, I will be working on a machine learning project at Oracle's internet intelligence office in Hanover. Looking forward, I'll be studying at the Technical University of Denmark (DTU) in Copanhagen for my junior fall, and interning with the American University of Kuwait (AUK) in Kuwait City for my junior spring in 2019. 
 
  <video src="/images/IMG_8086.mp4" width="100%" autoplay loop></video>
 
