--- a/_drafts/2018-06-08-blog-post-4.md
+++ b/_drafts/2018-06-08-blog-post-4.md
@@ -9,46 +9,40 @@ tags:
   - deep learning
 ---
 
-
-
 Working for Oracle
 ------
-Writing code from scratch in tensorflow
-Word2Vec embeddings with negative sampling
-Hierarchical softmax layer
+Oracle has a small (about 15 people) internet intelligence office right in Hanover, about a mile north of campus. I worked with their internet intelligence data, using machine learning to predict BGP paths and geolocations. We mostly adopted techniques from natural language processing (internet routing paths can be modeled like words in a language), and I wrote code to generate embeddings with negative sampling as well as a deep neural net for geolocation prediction. My boss, Alin, was invested in me and at many times even went over low-level code with me. His creativity and attention to detail inspire me. I liked the people in our office, whom I found to be relaxed yet extremely intelligent. Many of them were dartmouth alumni and had been working together for more than a decade.
 
 
 Activities
 ------
 
-I continued working part-time for [Protago Labs](http://protagolab.com/), an AI company I also worked for over the summer and into the fall. 
+I continued working part-time for [Protago Labs](http://protagolab.com/), an small AI company I have been working for since last June. We made solid progress on our conversational chatbot.
 
 Research
 
+Without the pressure of classes, I was ...
+
 Fencing
 
-For fencing this term, we had our most important event of the year, club nationals. We were the first place six-weapon team! I was the alternate for our men's epee squad, which was stacked this year and beat Cornell in the finals to get first place for the men's epee event as well. The last time Dartmouth won first was in 2014, and winning this year was special for our coach Scott, class of 2014, who is graduating this year with his PhD. Scott saw the potential for our team this year and really pushed us to be our best. He recently said to me, "Wait, you don't watch fencing everyday before bed?"
-
-
-Formula racing?
-
+For fencing this term, we had our most important event of the year, club nationals. We were the first place six-weapon team! I was the alternate for our men's epee squad, which was stacked this year and beat Cornell in the finals to get first place for the men's epee event as well. The last time Dartmouth won first was in 2014, and winning this year was special for our coach Scott, class of 2014, who is graduating this year with his PhD. Scott saw the potential for our team this year and pushed us to be our best. He recently said to me, "Wait, you don't watch fencing everyday before bed?"
 
 TA
 
+I was a TA this term for Machine Learning and Statistical Analysis (COSC 74) with V.S. Subrahmanian. My duties consisted of holding office hours and grading homework assignments and tests. I'm excited that so many people who came to my office hours asked me about deep learning in addition to machine learning. 
 
 Tennis
 
+Spring in Hanover is absolutely beautiful. After not playing at all since the summer, I realized how much I missed tennis (and how out of shape I was). I've decided to make an effort to play tennis more often, since it always puts me in a good mood and is great exercise.
 
 
 Personal
 ------
 
-Living 
-
 
 **Living Off-Campus**
 
-
+I lived off campus in Hartford, VT (about ten minutes by car from campus) in a house with three medical school students. 
 
 <img src='/images/IMG_9055.JPG' width="99%">
 
