add more to blog

--- a/_drafts/2018-06-08-blog-post-4.md
+++ b/_drafts/2018-06-08-blog-post-4.md
@@ -1,7 +1,7 @@
 ---
 title: 'Creative title Spring (2018)'
 date: 2018-06-08
-permalink: /posts/2018/3/blog-post-4/
+permalink: /posts/2018/6/blog-post-4/
 tags:
   - dartmouth
   - oracle
@@ -35,6 +35,8 @@ Tennis
 
 Spring in Hanover is absolutely beautiful. After not playing at all since the summer, I realized how much I missed tennis (and how out of shape I was). I've decided to make an effort to play tennis more often, since it always puts me in a good mood and is great exercise.
 
+Take a picture of the tennis court on a nice day
+
 
 Personal
 ------
@@ -42,7 +44,7 @@ Personal
 
 **Living Off-Campus**
 
-I lived off campus in Hartford, VT (about ten minutes by car from campus) in a house with three medical school students. 
+I lived off campus in Hartford, VT (about ten minutes by car from campus) in a house with three medical school students. My grandparents, who live in Boston, graciously allowed me to borrow their car for the term since they don't use it much. 
 
 <img src='/images/IMG_9055.JPG' width="99%">
 
