--- a/_drafts/2018-06-08-blog-post-4.md
+++ b/_drafts/2018-06-08-blog-post-4.md
@@ -6,13 +6,19 @@ tags:
   - dartmouth
   - oracle
   - dyn
+  - machine learning
   - deep learning
+  - protago labs
+  - fencing
+  - teaching assistant
+  - tennis
 ---
 
-Working for Oracle
+This spring quarter, I worked in Hanover at Oracle. I spent a lot of time on machine learning projects both at Oracle and for my research since I did not take classes, and I'm grateful to have been close enough to campus that I was able to spend time with friends and work as a teaching assistant for a machine learning class.
+
+Oracle
 ------
 Oracle has a small (about 15 people) internet intelligence office right in Hanover, about a mile north of campus. I worked with their internet intelligence data, using machine learning to predict BGP paths and geolocations. We mostly adopted techniques from natural language processing (internet routing paths can be modeled like words in a language), and I wrote code to generate embeddings with negative sampling as well as a deep neural net for geolocation prediction. My boss, Alin, was invested in me and at many times even went over low-level code with me. His creativity and attention to detail inspire me. I liked the people in our office, whom I found to be relaxed yet extremely intelligent. Many of them were dartmouth alumni and had been working together for more than a decade.
-
 
 Activities
 ------
@@ -21,7 +27,10 @@ I continued working part-time for [Protago Labs](http://protagolab.com/), an sma
 
 Research
 
-Without the pressure of classes, I was ...
+Without the pressure of classes, I was able to spend a lot more mental time focusing on and thinking about my research in using deep learning to read lung adenocarcinoma microscopy slides. I spent a lot of time cleaning data and working with medical doctors to annotate our dataset. Getting high quality, labeled data has been the main bottleneck of progress in our project, and my lesson learned this term is that all resources should be devoted to resolving bottleneck issues until they are solved. As the main curator of our dataset, I became extremely familiar with the data and spent many weeks actually learning about the biology of the lung cancer images and how to classify them. 
+
+Picture of slide
+If anyone happens to have a unlabeled lung adenocarcinoma microscopy slide that they need to read but no have access to an actual doctor, I would be more than happy to read it and tell you the cancer pattern and grade. 
 
 Fencing
 
@@ -29,7 +38,7 @@ For fencing this term, we had our most important event of the year, club nationa
 
 TA
 
-I was a TA this term for Machine Learning and Statistical Analysis (COSC 74) with V.S. Subrahmanian. My duties consisted of holding office hours and grading homework assignments and tests. I'm excited that so many people who came to my office hours asked me about deep learning in addition to machine learning. 
+I was a TA this term for Machine Learning and Statistical Analysis (COSC 74) with V.S. Subrahmanian. My duties consisted of holding office hours and grading homework assignments and tests. I'm excited that so many people who came to my office hours asked me about deep learning in addition to machine learning.
 
 Tennis
 
@@ -63,6 +72,7 @@ Food ratings
 Closing
 ------
 
+Some weeks were busy, especially a few when work for Oracle, research, and Protago Labs were heavy at the same time. 
 
  <video src="/images/IMG_8086.mp4" width="100%" autoplay loop></video>
 
