--- a/_drafts/2018-06-08-blog-post-4.md
+++ b/_drafts/2018-06-08-blog-post-4.md
@@ -14,7 +14,7 @@ tags:
   - tennis
 ---
 
-This spring quarter, I worked in Hanover at Oracle. I spent a lot of time on machine learning projects both at Oracle and for my research since I did not take classes, and I'm grateful to have been close enough to campus that I was able to spend time with friends and work as a teaching assistant for a machine learning class.
+This spring quarter, I worked at Oracle in Hanover. I spent a lot of time on machine learning projects both at Oracle and for my research since I did not take classes, and I'm grateful to have been close enough to campus that I was also able to spend time with friends and work as a teaching assistant for a machine learning class.
 
 Oracle
 ------
@@ -23,7 +23,7 @@ Oracle has a small (about 15 people) internet intelligence office right in Hanov
 Activities
 ------
 
-I continued working part-time for [Protago Labs](http://protagolab.com/), an small AI company I have been working for since last June. We made solid progress on our conversational chatbot.
+I continued working part-time for [Protago Labs](http://protagolab.com/), an small AI company I have been working for since last June. We made solid progress on our conversational chatbot by implementing some of the newer techniques that came out in papers this year.
 
 Research
 
@@ -54,6 +54,8 @@ Personal
 **Living Off-Campus**
 
 I lived off campus in Hartford, VT (about ten minutes by car from campus) in a house with three medical school students. My grandparents, who live in Boston, graciously allowed me to borrow their car for the term since they don't use it much. 
+
+Picture of my room
 
 <img src='/images/IMG_9055.JPG' width="99%">
 
