--- a/_drafts/2018-06-08-blog-post-4.md
+++ b/_drafts/2018-06-08-blog-post-4.md
@@ -14,11 +14,13 @@ tags:
   - tennis
 ---
 
-This spring quarter, I worked at Oracle in Hanover. I spent a lot of time on machine learning projects both at Oracle and for my research since I did not take classes, and I'm grateful to have been close enough to campus that I was also able to spend time with friends and work as a teaching assistant for a machine learning class.
+This spring quarter, I worked at Oracle (previously Dyn) in Hanover. I spent a lot of time on machine learning projects both at Oracle and for my research since I was not enrolled in classes, and I'm grateful to have been close enough to campus that I could spend time with friends and work as a teaching assistant for a machine learning class.
 
 Oracle
 ------
-Oracle has a small (about 15 people) internet intelligence office right in Hanover, about a mile north of campus. I worked with their internet intelligence data, using machine learning to predict BGP paths and geolocations. We mostly adopted techniques from natural language processing (internet routing paths can be modeled like words in a language), and I wrote code to generate embeddings with negative sampling as well as a deep neural net for geolocation prediction. My boss, Alin, was invested in me and at many times even went over low-level code with me. His creativity and attention to detail inspire me. I liked the people in our office, whom I found to be relaxed yet extremely intelligent. Many of them were dartmouth alumni and had been working together for more than a decade.
+Oracle has a small (about 15 people) internet intelligence office right in Hanover, about a mile north of campus. I worked with their internet intelligence data, using machine learning to predict BGP paths and geolocations. We mostly adopted techniques from natural language processing (internet routing paths can be modeled like words in a language), and I wrote code to generate embeddings with negative sampling as well as a deep neural net for geolocation prediction of internet domain names. My boss, Alin, was invested in me and at many times even went over low-level code with me. His creativity and attention to detail inspire me. I liked the people in our office, whom I found to be relaxed yet extremely intelligent. Many of them were dartmouth alumni and had been working together for more than a decade.
+
+I had a couple of observations from working at Oracle. The first is my progress in developing our deep learning model was non-linear. A lot of time was spent on brainstorming, reading papers, cleaning data, and debugging that didn't yield very much progress, whereas most of the big improvements to the model came from things that I was able to code in a few days. I think it really followed the '80-20 rule' where about eighty percent of my results were produced in twenty percent of the time, and the other eighty percent of the time only yielded twenty percent of the results. The other interesting thing that was confirmed by my internship at Oracle is the idea that it is easy for AI to automate tasks that humans can do, but much harder for AI to automate tasks that humans cannot do. In the case of my project, for many of the things we were trying to predict, (1) we did not know if it was even feasible, (2) we could not gather new data, and (3) we were not able to use human insights improve our model since we were unable to do the task ourselves. These challenges make it difficult to build compelling AI. 
 
 Activities
 ------
@@ -27,7 +29,7 @@ I continued working part-time for [Protago Labs](http://protagolab.com/), an sma
 
 Research
 
-Without the pressure of classes, I was able to spend a lot more mental time focusing on and thinking about my research in using deep learning to read lung adenocarcinoma microscopy slides. I spent a lot of time cleaning data and working with medical doctors to annotate our dataset. Getting high quality, labeled data has been the main bottleneck of progress in our project, and my lesson learned this term is that all resources should be devoted to resolving bottleneck issues until they are solved. As the main curator of our dataset, I became extremely familiar with the data and spent many weeks actually learning about the biology of the lung cancer images and how to classify them. 
+Without the pressure of classes, I was able to spend a lot more mental time focusing on and thinking about my research in using deep learning to read lung adenocarcinoma microscopy slides. I spent a lot of time cleaning data and working with medical doctors to annotate our dataset. Getting high quality, labeled data has been the bottleneck of progress in our project, and my lesson learned this term is that all resources should be devoted to resolving bottleneck issues until they are solved. As the curator of our dataset, I became extremely familiar with the data and spent many weeks actually learning about the biology of the lung cancer images and how to classify them. 
 
 Picture of slide
 If anyone happens to have a unlabeled lung adenocarcinoma microscopy slide that they need to read but no have access to an actual doctor, I would be more than happy to read it and tell you the cancer pattern and grade. 
@@ -38,7 +40,7 @@ For fencing this term, we had our most important event of the year, club nationa
 
 TA
 
-I was a TA this term for Machine Learning and Statistical Analysis (COSC 74) with V.S. Subrahmanian. My duties consisted of holding office hours and grading homework assignments and tests. I'm excited that so many people who came to my office hours asked me about deep learning in addition to machine learning.
+I was a TA this term for Machine Learning and Statistical Analysis (COSC 74) with V.S. Subrahmanian. My duties consisted of holding office hours and grading homework assignments and tests. I'm excited that so many people who came to my office hours asked me about deep learning in addition to machine learning. I hope that the administration makes a bigger effort to hire faculty in deep learning, since Dartmouth is considered by many to be the "[birthplace of AI](https://en.wikipedia.org/wiki/Dartmouth_workshop)."
 
 Tennis
 
