some more edits

--- a/_drafts/2018-06-08-blog-post-4.md
+++ b/_drafts/2018-06-08-blog-post-4.md
@@ -31,8 +31,10 @@ Research
 
 Without the pressure of classes, I was able to spend a lot more mental time focusing on and thinking about my research in using deep learning to read lung adenocarcinoma microscopy slides. I spent a lot of time cleaning data and working with medical doctors to annotate our dataset. Getting high quality, labeled data has been the bottleneck of progress in our project, and my lesson learned this term is that all resources should be devoted to resolving bottleneck issues until they are solved. As the curator of our dataset, I became extremely familiar with the data and spent many weeks actually learning about the biology of the lung cancer images and how to classify them. 
 
+When I first started our study, I researched the relevant literature and was surprised that no one had already done it. Now, I see why it is so hard for deep learning researchers to develop tools for biomedical science; there is a large cost to obtaining data. Most large AI research groups do not have access to medical data since it is often challenging to partner with hospitals, even after a partnership is formed it is hard to acquire non-sensitive data in a useful format, and it is even more challenging to find medical doctors (who are often busy) willing to do the unsexy task of labeling your data. For me, I found it challenging that my research timeline is so dependent on waiting for our pathologists to label our data.
+
 Picture of slide
-If anyone happens to have a unlabeled lung adenocarcinoma microscopy slide that they need to read but no have access to an actual doctor, I would be more than happy to read it and tell you the cancer pattern and grade. 
+If anyone happens to have a unlabeled whole-slide lung adenocarcinoma microscopy image that they need to read but no have access to an actual doctor, I would be more than happy to read it and tell you the cancer pattern and grade. 
 
 Fencing
 
