--- a/_drafts/2018-06-08-blog-post-4.md
+++ b/_drafts/2018-06-08-blog-post-4.md
@@ -20,33 +20,30 @@ Oracle
 ------
 Oracle has a small (about 15 people) internet intelligence office right in Hanover, about a mile north of campus. I worked with their internet intelligence data, using machine learning to predict BGP paths and geolocations. We mostly adopted techniques from natural language processing (internet routing paths can be modeled like words in a language), and I wrote code to generate embeddings with negative sampling as well as a deep neural net for geolocation prediction of internet domain names. My boss, Alin, was invested in me and at many times even went over low-level code with me. His creativity and attention to detail inspire me. I liked the people in our office, whom I found to be relaxed yet extremely intelligent. Many of them were dartmouth alumni and had been working together for more than a decade.
 
-I had a couple of observations from working at Oracle. The first is my progress in developing our deep learning model was non-linear. A lot of time was spent on brainstorming, reading papers, cleaning data, and debugging that didn't yield very much progress, whereas most of the big improvements to the model came from things that I was able to code in a few days. I think it really followed the '80-20 rule' where about eighty percent of my results were produced in twenty percent of the time, and the other eighty percent of the time only yielded twenty percent of the results. The other interesting thing that was confirmed by my internship at Oracle is the idea that it is easy for AI to automate tasks that humans can do, but much harder for AI to automate tasks that humans cannot do. In the case of my project, for many of the things we were trying to predict, (1) we did not know if it was even feasible, (2) we could not gather new data, and (3) we were not able to use human insights improve our model since we were unable to do the task ourselves. These challenges make it difficult to build compelling AI. 
+I had a couple of observations from working at Oracle. The first is that my progress on our project was non-linear. A lot of time was spent on brainstorming, reading papers, cleaning data, and debugging that didn't yield very much progress, whereas most of the big improvements to the model came from things that I was able to code in a few days. It closely followed the '80-20 rule,' where about eighty percent of my results were produced in twenty percent of the time, and the other eighty percent of the time only yielded twenty percent of the results. The other interesting thing that was confirmed by my internship is the idea that it is easy for AI to automate tasks that humans can do, but much harder for AI to automate tasks that humans cannot do. Our project wanted AI to predict things that typical humans could not, so (1) we did not know if it was even feasible, (2) we could not gather more data, and (3) we were not able to use human insights improve our model since we were unable to do the task ourselves. These challenges make it difficult to build compelling AI. 
 
 Activities
 ------
 
+**Protago Labs**
 I continued working part-time for [Protago Labs](http://protagolab.com/), an small AI company I have been working for since last June. We made solid progress on our conversational chatbot by implementing some of the newer techniques that came out in papers this year.
 
-Research
-
+**Research**
 Without the pressure of classes, I was able to spend a lot more mental time focusing on and thinking about my research in using deep learning to read lung adenocarcinoma microscopy slides. I spent a lot of time cleaning data and working with medical doctors to annotate our dataset. Getting high quality, labeled data has been the bottleneck of progress in our project, and my lesson learned this term is that all resources should be devoted to resolving bottleneck issues until they are solved. As the curator of our dataset, I became extremely familiar with the data and spent many weeks actually learning about the biology of the lung cancer images and how to classify them. 
 
-When I first started our study, I researched the relevant literature and was surprised that no one had already done it. Now, I see why it is so hard for deep learning researchers to develop tools for biomedical science; there is a large cost to obtaining data. Most large AI research groups do not have access to medical data since it is often challenging to partner with hospitals, even after a partnership is formed it is hard to acquire non-sensitive data in a useful format, and it is even more challenging to find medical doctors (who are often busy) willing to do the unsexy task of labeling your data. For me, I found it challenging that my research timeline is so dependent on waiting for our pathologists to label our data.
+When I first started our study, I researched the relevant literature and was surprised that no one had already done something similar. Now, I see why it is so hard for deep learning researchers to develop tools for biomedical science; there is a large cost to obtaining data. Most large AI research groups do not have access to medical data since it is often challenging to partner with hospitals, even after a partnership is formed it is hard to acquire non-sensitive data in a useful format, and it is even more challenging to find medical doctors (who are often busy) willing to do the unsexy task of labeling your data. For me, I found it challenging that my research timeline is so dependent on waiting for our pathologists to label our data.
 
 Picture of slide
 If anyone happens to have a unlabeled whole-slide lung adenocarcinoma microscopy image that they need to read but no have access to an actual doctor, I would be more than happy to read it and tell you the cancer pattern and grade. 
 
-Fencing
+**Fencing**
+For fencing this term, we had our most important event of the year, club nationals. We were the first place six-weapon team! I was the alternate for our men's epee squad, which was stacked this year and beat Cornell in the finals to get first place for the men's epee event as well. The last time Dartmouth won first was in 2014, and winning this year was special for our coach Scott, class of 2014, who is graduating this year with his PhD. Scott saw the potential for our team this year and pushed us to be our best. He recently said to me, "Wait, you don't watch fencing videos before bed everyday?" 
 
-For fencing this term, we had our most important event of the year, club nationals. We were the first place six-weapon team! I was the alternate for our men's epee squad, which was stacked this year and beat Cornell in the finals to get first place for the men's epee event as well. The last time Dartmouth won first was in 2014, and winning this year was special for our coach Scott, class of 2014, who is graduating this year with his PhD. Scott saw the potential for our team this year and pushed us to be our best. He recently said to me, "Wait, you don't watch fencing everyday before bed?"
-
-TA
-
+**TA**
 I was a TA this term for Machine Learning and Statistical Analysis (COSC 74) with V.S. Subrahmanian. My duties consisted of holding office hours and grading homework assignments and tests. I'm excited that so many people who came to my office hours asked me about deep learning in addition to machine learning. I hope that the administration makes a bigger effort to hire faculty in deep learning, since Dartmouth is considered by many to be the "[birthplace of AI](https://en.wikipedia.org/wiki/Dartmouth_workshop)."
 
-Tennis
-
-Spring in Hanover is absolutely beautiful. After not playing at all since the summer, I realized how much I missed tennis (and how out of shape I was). I've decided to make an effort to play tennis more often, since it always puts me in a good mood and is great exercise.
+**Tennis**
+Spring in Hanover is absolutely beautiful, and I made it a priority to play tennis at least once every week. After not playing since last summer, I realized how much I missed tennis (and how out of shape I was). I've decided to make an effort to play tennis more often, since it always puts me in a good mood and is great exercise.
 
 Take a picture of the tennis court on a nice day
 
@@ -54,10 +51,10 @@ Take a picture of the tennis court on a nice day
 Personal
 ------
 
-
 **Living Off-Campus**
+I lived off campus in Hartford, VT (about ten minutes by car from campus) in a house with three medical school students and their two cats. It was far better than school housing. My room was big, there was free parking and laundry, and the house had a full kitchen. Meredith, Sylvia, and Allie, thanks for being great housemates!
 
-I lived off campus in Hartford, VT (about ten minutes by car from campus) in a house with three medical school students. My grandparents, who live in Boston, graciously allowed me to borrow their car for the term since they don't use it much. 
+My grandparents, who live in the suburbs of Boston, graciously let me borrow their car for the term since they don't use it much. I enjoyed driving instead of walking and I think that I will probably prefer to live somewhere suburban when I'm older, instead of a big city.  
 
 Picture of my room
 
@@ -68,17 +65,27 @@ Picture of my room
 **Books**
 
 **Food**
-Pictures of food
-Meal with house
-What I eat daily
+This term was my first time cooking for myself, as I was living off-campus without a meal plan. I realized how expensive Dartmouth's meal plan is compared to making your own food: Dartmouth's cheapest plan is $175 per week, whereas buying my own groceries came out to around $50 per week. In a typical week, I would eat five turkey sandwiches and five meals of fried rice that I made all at once on Sunday nights. For the remaining meals I usually ate with friends either at home or at the school dining hall.
 
-Food ratings
+I came up with a super nerdy scoring system to help me decide what food to buy. Basically, I scored foods by price, preperation time, and healthiness, and ranked them by their average score. I avoided food that I did not like and food that was not healthy. Foods that I found to be inexpensive, easy to make, and healthy were broccoli, carrots, mushrooms, spinach, tomatoes, bananas, and clementines. So I often ate fried rice, tomato and egg, or cooked spinach with mushrooms. I guess my sandwiches aren't super healthy but they're really easy to prepare and I've gotten good feedback on them, so I'll share my recipe below (more for future me to remember than for you):
+
+- Sourdough bread from When Pigs Fly, toasted
+- Three slices of Ovengold Roasted Turkey Breast from Boar's Head
+- One slice of Cracked Pepper Mill Smoked Turkey Breast from Boar's Head
+- One slice of Alpine Lace Swiss Cheese
+- One egg fried sunny side up with salt and pepper (optional)
+- Onions cooked with Red Fresno Pepper
+- Arugula
+- Mayo and Sriracha Sauce
+
+Meal with house
+Picture of sandwich
 
 
 Closing
 ------
 
-Some weeks were busy, especially a few when work for Oracle, research, and Protago Labs were heavy at the same time. 
+Some weeks were quite busy, especially when work for Oracle, research, and Protago Labs were heavy at the same time. 
 
  <video src="/images/IMG_8086.mp4" width="100%" autoplay loop></video>
 
