--- a/_drafts/2018-06-08-blog-post-4.md
+++ b/_drafts/2018-06-08-blog-post-4.md
@@ -33,8 +33,7 @@ Without the pressure of classes, I was able to spend a lot more mental time focu
 
 When I first started our study, I researched the relevant literature and was surprised that no one had already done something similar. Now, I see why it is so hard for deep learning researchers to develop tools for biomedical science; there is a large cost to obtaining data. Most large AI research groups do not have access to medical data since it is often challenging to partner with hospitals, even after a partnership is formed it is hard to acquire non-sensitive data in a useful format, and it is even more challenging to find medical doctors (who are often busy) willing to do the unsexy task of labeling your data. For me, I found it challenging that my research timeline is so dependent on waiting for our pathologists to label our data.
 
-Picture of slide
-If anyone happens to have a unlabeled whole-slide lung adenocarcinoma microscopy image that they need to read but no have access to an actual doctor, I would be more than happy to read it and tell you the cancer pattern and grade. 
+<img src='/images/lung_graphic.jpg' width="99%">
 
 **Fencing**
 For fencing this term, we had our most important event of the year, club nationals. We were the first place six-weapon team! I was the alternate for our men's epee squad, which was stacked this year and beat Cornell in the finals to get first place for the men's epee event as well. The last time Dartmouth won first was in 2014, and winning this year was special for our coach Scott, class of 2014, who is graduating this year with his PhD. Scott saw the potential for our team this year and pushed us to be our best. He recently said to me, "Wait, you don't watch fencing videos before bed everyday?" 
@@ -58,7 +57,8 @@ My grandparents, who live in the suburbs of Boston, graciously let me borrow the
 
 Picture of my room
 
-<img src='/images/IMG_9055.JPG' width="99%">
+<img src='/images/IMG_0802.JPG' width="49%">
+<img src='/images/IMG_1887.JPG' width="49%">
 
 
 
