--- a/_drafts/2018-06-08-blog-post-4.md
+++ b/_drafts/2018-06-08-blog-post-4.md
@@ -1,5 +1,5 @@
 ---
-title: 'Spring (2018)'
+title: 'Hello Hanover Spring (2018)'
 date: 2018-06-08
 permalink: /posts/2018/6/blog-post-4/
 tags:
@@ -18,11 +18,7 @@ This spring quarter, I worked at Oracle (previously Dyn) in Hanover. I spent a l
 
 Oracle
 ------
-<<<<<<< HEAD
-Oracle has a small (about 15 people) internet intelligence office right in Hanover, about a mile north of campus. I worked with their internet intelligence data, using machine learning to predict BGP paths and IP geolocations. We mostly adopted techniques from natural language processing (internet routing paths can be modeled like words in a language), and I wrote code to generate embeddings of text as well as a deep neural net for predicting IP geolocation from domain name and BGP paths. My boss, Alin, was invested in me and at many times even went over low-level code with me. His creativity and attention to detail inspire me. I liked the people in our office, who were relaxed yet extremely intelligent. Many of them were dartmouth alumni and had been working together for over a decade.
-=======
 Oracle has a small (about 15 people) internet intelligence office right in Hanover, about a mile north of campus. I worked with their internet intelligence data, using machine learning to predict geolocations of IP addresses and domain names. We mostly adopted techniques from natural language processing (internet routing paths can be modeled like words in a language). My boss, Alin, was invested in me and at many times even went over low-level code with me. His creativity and attention to detail inspire me. I liked the people in our office, whom I found to be relaxed yet extremely intelligent. Many of them were dartmouth alumni and had been working together for more than a decade.
->>>>>>> 03908a586ad4890caca621a237396ad5a6aa51d1
 
 I had a couple of observations from working at Oracle. The first is that my progress on our project was non-linear. A lot of time was spent on brainstorming, reading papers, cleaning data, and debugging that didn't yield very much progress, whereas most of the big improvements to the model came from things that I was able to code in a few days. It closely followed the '80-20 rule,' where about eighty percent of my results were produced in twenty percent of the time, and the other eighty percent of the time only yielded twenty percent of the results. The other interesting thing that was confirmed by my internship is the idea that it is easy for AI to automate tasks that humans can do, but much harder for AI to automate tasks that humans cannot do. Our project wanted AI to predict things that typical humans could not, so (1) we did not know if it was even feasible, (2) we could not gather more data, and (3) we were not able to use human insights improve our model since we were unable to do the task ourselves. Despite these challenges, I was quite happy with our final product, a model that was able to predict IP geolocations with approximately human-level performance.
 
