--- a/_drafts/2018-06-08-blog-post-4.md
+++ b/_drafts/2018-06-08-blog-post-4.md
@@ -26,9 +26,11 @@ Activities
 ------
 
 **Protago Labs**
+
 I continued working part-time for [Protago Labs](http://protagolab.com/), a small AI company I have been working for since last June. We made solid progress on our conversational chatbot by implementing some of the newer techniques that came out in papers this year.
 
 **Research**
+
 Without the pressure of classes, I was able to spend a lot more time on my research in using deep learning to read lung adenocarcinoma microscopy slides. I spent a lot of time cleaning data and working with medical doctors to annotate our dataset. Getting high quality, labeled data has been the bottleneck of progress in our project, and my lesson learned this term is that all resources should be devoted to resolving bottleneck issues until they are solved. As the organizer of our dataset, I became extremely familiar with the data and spent many weeks actually learning about the biology of the lung cancer images and how to classify them. 
 
 When I first started our study, I researched the relevant literature and was surprised that no one had already done something similar. Now, I see why it is so hard for deep learning researchers to develop tools for biomedical science; there is a large cost to obtaining data. Most large AI research groups do not have access to medical data since it is often challenging to partner with hospitals, even after a partnership is formed it is hard to acquire non-sensitive data in a useful format, and it is even more difficult to find doctors (who are often busy) willing to do the unsexy task of labeling your data. For me, it was at times challenging that my research timeline was so dependent on waiting for our pathologists to label our data.
@@ -36,15 +38,19 @@ When I first started our study, I researched the relevant literature and was sur
 <img src='/images/lung_graphic_small.jpg' width="99%">
 
 **Fencing**
+
 For fencing this term, we had our most important event of the year, club nationals. We were the first place six-weapon team! I was the alternate for our men's epee squad, which was stacked this year and beat Cornell in the finals to get first place for the men's epee event as well. The last time Dartmouth won first was in 2014, and winning this year was special for our coach Scott, class of 2014, who is graduating this year with his PhD. Scott saw the potential for our team this year and pushed us to be our best. He recently said to me, "Wait, you don't watch fencing videos before bed everyday?" 
 
 **TA**
+
 I was a TA this term for Machine Learning and Statistical Analysis (COSC 74) with V.S. Subrahmanian. My duties consisted of holding office hours and grading homework assignments and tests. I'm excited that so many people who came to my office hours asked me about deep learning in addition to machine learning. I hope that the administration makes a bigger effort to hire faculty in deep learning, since Dartmouth is considered by many to be the "[birthplace of AI](https://en.wikipedia.org/wiki/Dartmouth_workshop)."
 
 **Tennis**
+
 Spring in Hanover is absolutely beautiful, and I made it a priority to play tennis at least once every week. After not playing since last summer, I realized how much I missed tennis (and how out of shape I was). I've decided to make an effort to play tennis more often, since it always puts me in a good mood and is great exercise.
 
 Take a picture of the tennis court on a nice day
+
 <img src='/images/2.png' width="49%">
 
 
@@ -52,16 +58,16 @@ Personal
 ------
 
 **Living Off-Campus**
+
 I lived off campus in Hartford, VT (about ten minutes by car from campus) in a house with three medical school students and their two cats. It was far better than school housing. My room was big, there was free parking and laundry, and the house had a full kitchen. Meredith, Sylvia, and Allie, thanks for being great housemates!
 
 My grandparents, who live in the suburbs of Boston, graciously let me borrow their car for the term since they don't use it much. I enjoyed driving instead of walking and I think that I will probably prefer to live somewhere suburban when I'm older, instead of a big city.  
 
-Picture of my room
-
-<img src='/images/IMG_0802.JPG' width="49%">
-<img src='/images/IMG_1887.JPG' width="49%">
+<img src='/images/IMG_0802.jpg' width="49%">
+<img src='/images/IMG_1887.jpg' width="49%">
 
 **Food**
+
 This term was my first time cooking for myself, as I was living off-campus without a meal plan. I realized how expensive Dartmouth's meal plan is compared to making your own food: Dartmouth's cheapest plan is $175 per week, whereas buying my own groceries came out to around $50 per week. In a typical week, I would eat five turkey sandwiches and five meals of fried rice that I made all at once on Sunday nights. For the remaining meals I usually ate with friends either at home or at the school dining hall.
 
 I came up with a super nerdy scoring system to help me decide what food to buy. Basically, I scored foods by price, preperation time, and healthiness, and ranked them by their average score. I avoided food that I did not like and food that was not healthy. Foods that I found to be inexpensive, easy to make, and healthy were broccoli, carrots, mushrooms, spinach, tomatoes, bananas, and clementines. So I often ate fried rice, tomato and egg, or cooked spinach with mushrooms. I guess my sandwiches aren't super healthy but they're really easy to prepare and I've gotten good feedback on them, so I'll share my recipe below (more for future me to remember than for you):
@@ -75,8 +81,8 @@ I came up with a super nerdy scoring system to help me decide what food to buy. 
 - Arugula
 - Mayo and Sriracha Sauce
 
-<img src='/images/IMG_2515.JPG' width="49%">
-<img src='/images/IMG_6269.JPG' width="49%">
+<img src='/images/IMG_2515.jpg' width="49%">
+<img src='/images/IMG_6269.jpg' width="49%">
 
 **Books**
 
