small change to ending

--- a/_drafts/2018-06-08-blog-post-4.md
+++ b/_drafts/2018-06-08-blog-post-4.md
@@ -1,6 +1,6 @@
 ---
 title: 'Hello Hanover Spring (2018)'
-date: 2018-06-08
+date: 2018-06-01
 permalink: /posts/2018/6/blog-post-4/
 tags:
   - dartmouth
@@ -90,10 +90,6 @@ I read *Mountains Beyond Mountains* by Tracy Kidder, a book that my friend Holly
 
 Closing
 ------
-
-Some weeks were quite busy, especially when work for Oracle, research, and Protago Labs were heavy at the same time. 
-
- <video src="/images/IMG_8086.mp4" width="100%" autoplay loop></video>
-
+Some weeks were quite busy, especially when work for Oracle, research, and Protago Labs were heavy at the same time. I'm going to Australia and New Zealand from 06/08 to 06/19 with my friend June for the spring-summer interim, and I'm excited for the supposedly glorious sophomore summer term in Hanover!
 
 
